# app/Http/Requests/BusinessRequest.php
@@ -26,7 +26,7 @@ class BusinessRequest extends FormRequest
         
         return [
             'business_name' => 'required|string|min:3|max:255',
-            'business_logo' => 'nullable|image|mimes:jpeg,png,jpg,gif|max:3048',
+            'business_logo' => 'nullable|image|mimes:jpeg,png,jpg,gif|max:5048',
             'business_email' => 'nullable|email',
             'business_phone' => 'nullable|string|min:5|max:50',
             'business_address' => 'nullable|string|min:5|max:50',
@@ -36,6 +36,9 @@ class BusinessRequest extends FormRequest
             'business_website' => 'nullable|string',
             'business_latitude' => 'nullable', 
             'business_longitude' => 'nullable',
+            'business_about_us' => 'nullable',
+            'business_services' => 'nullable',
+            'business_additional_info' => 'nullable',
             'category_id' => 'required|exists:categories,id',
             
             
