# app/Http/Resources/UserResource.php
@@ -92,6 +92,9 @@ class UserResource extends JsonResource {
             'business_city' => $business->business_city,
             'business_country' => $business->business_country,
             'business_website' => $business->business_website,
+            'business_about_us' => $business->business_about_us,
+            'business_services' => $business->business_services,
+            'business_additional_info' => $business->business_additional_info,
             'business_latitude' => $business->business_latitude,
             'business_longitude' => $business->business_longitude,
             'category_id' => $business->category_id,
